# boring-figures

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-poetry.txt  requirements-pre-commit.txt
taln-2023/: pyproject.toml
taln-2023/assets/: wandb_export_2023-02-13T17_59_44.642+01_00.csv  wandb_export_2023-02-13T18_57_26.877+01_00.csv
taln-2023/taln_2023/: app.py
